--- a/README.adoc
+++ b/README.adoc
@@ -12,13 +12,15 @@ This project implements:
 
 For the first time
 
-```bash
+[source,bash]
+----
 ./manage.py syncdb
 ./manage.py migrate
-```
+----
 
 run server
 
-```bash
+[source,bash]
+----
 ./manage.py runserver
-```
+----
